# Haskell-Learning

./: README.md  flake.nix  noobproject.cabal
app/: Main.hs
src/: App.hs  Lib.hs  baby2.hs
test/Test/Tests/: Lib.hs  Sample.hs
test/golden/sample/: output.golden
